Two additional bootstrap components.

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,13 @@
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     />
+    <style>
+      .jumbotron{
+        background: url(https://upload.wikimedia.org/wikipedia/commons/a/a3/NASA_Worm_logo.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+      }
+    </style>
   </head>
   <body>
     <div class="container">
@@ -61,7 +68,7 @@
         </div>
 
         {% for hemisphere in mars.hemispheres %}
-        <div class="col-md-6">
+        <div class="col-md-3">
           <div class="thumbnail">
             <img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="...">
             <div class="caption">
